--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "parcel-project-template",
   "version": "2.0.0",
   "description": "",
-  "homepage": "https://project-35-customer.github.io/project-35-customer",
+  "homepage": "https://Pechenkooo3.github.io/project-35-customer",
   "scripts": {
     "start": "parcel src/*.html",
     "build": "parcel build src/*.html --public-url /project-35-customer/"
